# csa-lab3

./: .gitignore  .markdownlint.yml  README.md
.github/workflows/: markdown.yml  python.yml
docs/: isa.md  syntax.md
docs/schemes/: Makefile  cu.drawio  datapath.drawio
examples/: hello.asm  hello_username.asm  prob1.asm  sum.asm
src/: Makefile  alu.py  alu_test.py  control_unit_test.py  datapath_test.py  golden_test.py  integration_test.py  isa.py  machine.py  pyproject.toml  signals_test.py  translator.py  translator_test.py
src/golden/: cat.yml  hello.yml  hello_name.yml  prob1.yml
